--- a/adc.uvprojx
+++ b/adc.uvprojx
@@ -388,6 +388,16 @@
               <FileType>1</FileType>
               <FilePath>.\adc.c</FilePath>
             </File>
+            <File>
+              <FileName>Peripherie.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Peripherie.h</FilePath>
+            </File>
+            <File>
+              <FileName>Peripherie.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Peripherie.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
